bin/testsuite/tests/compiler/src/errors/compiler5133.swg
#global testerror "Err0380"
//#global export

#[Swag.Opaque]
struct A {}
